--- a/mandelbrot/Cargo.toml
+++ b/mandelbrot/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "mandelbrot"
 version = "0.1.0"
-authors = ["Lutz <lutz.reinhardt@tu-bs.de>"]
+authors = ["Lutz <dgf@iera.de>"]
 
 [dependencies]
 piston_window = "0.51"
 conrod = "0.38.1"
-image = "*"
+image = "0.10.1"
+num = "0.1.34"
