--- a/mandelbrot/Cargo.toml
+++ b/mandelbrot/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mandelbrot"
 version = "0.1.0"
-authors = ["Lutz <dgf@iera.de>"]
+authors = ["Lutz"]
 
 [dependencies]
 piston_window = "0.52"
