--- a/denon-control/Cargo.toml
+++ b/denon-control/Cargo.toml
@@ -7,5 +7,5 @@ authors = ["Lutz"]
 getopts = "0.2"
 avahi-sys = { git = "https://github.com/tari/avahi-sys", rev = "5011a300ff208b36866736f3282c7a84c43a4c44" }
 libc = "*"
-#conrod = "0.51.1"
-#piston_window = "0.63"
+dbus = "0.5"
+
