rust 2018 changes, do not use old email address

--- a/embed/Cargo.toml
+++ b/embed/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "embed"
 version = "0.1.0"
-authors = ["Lutz <lutz.reinhardt@tu-bs.de>"]
+authors = ["Lutz <bla@example.com>"]
 
 [lib]
 name = "embed"
