--- a/error_handling/Cargo.toml
+++ b/error_handling/Cargo.toml
@@ -1,4 +1,4 @@
 [package]
 name = "error_handling"
 version = "0.1.0"
-authors = ["Lutz <lutz.reinhardt@tu-bs.de>"]
+authors = ["Lutz <bla@example.com>"]
