--- a/hello_world/Cargo.toml
+++ b/hello_world/Cargo.toml
@@ -1,4 +1,4 @@
 [package]
 name = "hello_world"
 version = "0.1.0"
-authors = ["Lutz <lutz.reinhardt@tu-bs.de>"]
+authors = ["Lutz <bla@example.com>"]
