--- a/denon-control/Cargo.toml
+++ b/denon-control/Cargo.toml
@@ -6,6 +6,6 @@ edition = '2018'
 
 [dependencies]
 getopts = "0.2"
-avahi-sys = { git = "https://github.com/tari/avahi-sys", rev = "5011a300ff208b36866736f3282c7a84c43a4c44" }
+avahi-sys = "0.10.0"
 libc = "*"
 
