--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,11 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set denon dir
-      working-directory: ./denon-control
-    - name: Install avahi headers
-      run: sudo apt install libavahi-client-dev
     - name: Build
-      run: cargo build --verbose
+      run: |
+        cd denon-control
+        cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: |
+        cd denon-control
+        cargo test --verbose
