--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,9 +18,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install avahi headers
       run: sudo apt install libavahi-client-dev
+    - name: Check formatting
+      run: cargo fmt --check
     - name: Build
-      run: |
-        cargo build --verbose
+      run: cargo build --verbose
     - name: Run tests
-      run: |
-        cargo test --verbose
+      run: cargo test --verbose
