write permission for build job
dependabot PR may fail due to lack of permissions

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,6 +11,8 @@ env:
 
 jobs:
   build:
+    permissions:
+      pull-request: write
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
