--- a/denon-control/Cargo.toml
+++ b/denon-control/Cargo.toml
@@ -7,3 +7,8 @@ edition = '2021'
 [dependencies]
 getopts = "0.2"
 zeroconf = "0.15"
+
+[dev-dependencies]
+mockall = "0.13.0"
+assert_cmd = "2.0.16"
+predicates = "3.1.2"
