add type_state code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ members = [
 	"fourier_transform",
         "makros",
         "matrix",
-        "romans"
+        "romans",
+        "type_state"
 ]
