add first working code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ resolver = "2"
 members = [
         "adder",
         "assoc_types",
+        "cxx",
         "embed",
 	"fourier_transform",
         "makros",
