Add Rust - C++ interoperatibility experiment using cxx (#43)
Lets see what can be done using cxx.

The code is based on https://github.com/dtolnay/cxx/tree/master/demo

What works:
- non virtual classes
- interface classes
- functions should
- C++ template instantiations

What does not work:
- templates / generics

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ resolver = "2"
 members = [
         "adder",
         "assoc_types",
+        "cxx",
         "embed",
 	"fourier_transform",
         "makros",
         "matrix",
+        "pin",
         "romans",
         "type_state"
 ]
