--- a/async_io/Cargo.toml
+++ b/async_io/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio-test = "0.4.4"
 tokio = { version = "1.43.0", features = ["full"] }
+
+[dev-dependencies]
+mockall = "0.13.0"
+nix = { version = "0.29.0", features = ["signal"] }
+tokio-test = "0.4.4"
