--- a/async_io/Cargo.toml
+++ b/async_io/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2024"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.43.0", features = ["full"] }
+bytes = "1.10.1"
+tokio = { version = "1.43", features = ["full"] }
 
 [dev-dependencies]
 mockall = "0.13.0"
