--- a/async_io/Cargo.toml
+++ b/async_io/Cargo.toml
@@ -7,7 +7,14 @@ edition = "2024"
 
 [dependencies]
 bytes = "1.10.1"
-tokio = { version = "1.43", features = ["full"] }
+tokio = { version = "1.43", features = [
+    "macros",
+    "io-util",
+    "net",
+    "rt",
+    "signal",
+    "sync",
+] }
 
 [dev-dependencies]
 mockall = "0.13.0"
