fix action usage

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,8 @@ jobs:
       if: ${{ github.event_name == 'pull_request' }}
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        lcov-file: ${{github.workspace}}/lcov.info
+        working-directory: ${{github.workspace}}
+        lcov-file: lcov.info
 
   check-formatting:
     runs-on: ubuntu-latest
